@@ -1,3 +1,8 @@
+2008-07-27  Robert Millan  <rmh@aybabtu.com>
+
+	* disk/ata.c (grub_ata_dumpinfo): Use grub_dprintf() for debugging
+	information.
+
 2008-07-27  Bean  <bean123ch@gmail.com>
 
 	* fs/fat.c (GRUB_FAT_MAXFILE): New constant.
